[gd_scene load_steps=4 format=3 uid="uid://b37j421wyjdkg"]

[ext_resource type="Script" path="res://scripts/sea_invaders_player.gd" id="1_tqjpn"]
[ext_resource type="Texture2D" uid="uid://cbit3pjpagxx1" path="res://sprites/sea_invaders_sprites/SI_player.png" id="1_uqmp8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_27psd"]
radius = 5.0
height = 18.0

[node name="SeaInvadersPlayer" type="CharacterBody2D"]
script = ExtResource("1_tqjpn")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_uqmp8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CapsuleShape2D_27psd")

[node name="ShootingPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1, -16)

[node name="ShootCooldownTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="ShootCooldownTimer" to="." method="_on_shoot_cooldown_timer_timeout"]
